--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#FBFBFB</color>
+    <color name="colorPrimaryDark">#FDFDFD</color>
+    <color name="colorAccent">#D81B60</color>
+
+    <color name="colorSplashTheme">#1296db</color>
+    <color name="colorAppTheme">#FFFFFF</color>
+
+    <color name="green">#4CAF50</color>
+    <color name="gray">#673AB7</color>
+
+    <color name="circleProgressColor">#A2A1A1</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="color_14181B">#0791F8</color>
+
+    <color name="color_5AF0A2">#9DECC3</color>
+
+    <color name="color_black">#000000</color>
+    <color name="card_dark">#202020</color>
+
 </resources>
