--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,36 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="300dp"
-        android:src="@drawable/top"/>
+        android:src="@drawable/top" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/video_link"
         android:layout_marginLeft="12dp"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
+        android:text="@string/video_link"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/ed_video_link"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:hint="@string/hint_link_msg"
         android:paddingLeft="15dp"
-        android:hint="@string/hint_link_msg"/>
+        android:textSize="14sp" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_del_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_alignParentRight="true"
+            android:text="@string/delete_water_mark" />
+    </RelativeLayout>
 
 </LinearLayout>
