--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,10 @@
             android:layout_marginRight="25dp"
             android:layout_alignParentRight="true"
             android:text="@string/delete_water_mark" />
+        <TextView
+            android:id="@+id/tv_model"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
 
 </LinearLayout>
