--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorAppTheme</item>
         <!--状态栏-->
-        <item name="colorPrimaryDark">@color/colorAppTheme</item>
+        <item name="colorPrimaryDark">@color/color_black</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/colorAppTheme</item>
     </style>
